FIX: Fixed dialog box alignments for firefox

--- a/src/components/commons/dialog/dialog.css
+++ b/src/components/commons/dialog/dialog.css
@@ -25,10 +25,10 @@
 
 .btn-no {
   bottom: 1em;
-  right: 9em;
+  right: 8.7em;
 }
 
 .btn-yes {
   bottom: 2em;
-  left: 8em;
+  left: 7.7em;
 }
